--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
     "chroma-js": "^2.4.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.21",
+    "framer-motion": "^11.11.8",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
+    "lucide-react": "^0.452.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.3.0",
     "react-marquee-slider": "^1.1.5",
     "react-scroll": "^1.9.0",
     "styled-components": "^6.1.12",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.166.1",
     "xlsx": "^0.18.5"
   },
